--- a/my_site/p_library/templates/borrowed_books.html
+++ b/my_site/p_library/templates/borrowed_books.html
@@ -1,17 +1,9 @@
-{% load static %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Borrowed books</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
-    <p>Книги, которые одолжили мои друзья:</p>
+{% block nav-borrowed %}<a class="nav-item nav-link active text-uppercase" href="">Книги у друзей</a>{% endblock %}
+
+{% block content %}
+    <h5 class="mb-3">Книги, которые одолжили мои друзья:</h5>
     <table class="table table-striped table-bordered">
         <thead>
             <th></th>
@@ -30,5 +22,4 @@
             {% endfor %}
         </tbody>
     </table>
-</body>
-</html>
+{% endblock %}
