--- a/my_site/p_library/templates/base.html
+++ b/my_site/p_library/templates/base.html
@@ -18,6 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 justify-content-center">
             <div class="navbar-nav">
                 {% block nav-lib %}<a class="nav-item nav-link" href="{% url 'library' %}">Библиотека</a>{% endblock %}
+                {% block nav-add-authors-list %}<a class="nav-item nav-link" href="{% url 'p_library:authors_list' %}">Авторы</a>{% endblock %}
                 {% block nav-pub %}<a class="nav-item nav-link" href="{% url 'publishers' %}">Издательства</a>{% endblock %}
                 {% block nav-borrowed %}<a class="nav-item nav-link" href="{% url 'borrowed_books' %}">Книги у друзей</a>{% endblock %}
                 {% block nav-add-book %}<a class="nav-item nav-link" href="{% url 'add_book' %}">Добавить книгу</a>{% endblock %}
