Add github authorization, add login buttons on the home page

--- a/my_site/p_library/static/css/base.css
+++ b/my_site/p_library/static/css/base.css
@@ -5,3 +5,11 @@ main {
 nav a {
     text-transform: uppercase;
 }
+
+.login {
+    margin-right: 150px;
+}
+
+.greeting {
+    margin-bottom: 0;
+}
