--- a/my_site/p_library/templates/base.html
+++ b/my_site/p_library/templates/base.html
@@ -13,7 +13,7 @@
     {% endblock %}
 </head>
 <body>
-    <header>
+    <header class="d-flex flex-column">
         {% block nav %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 justify-content-center">
             <div class="navbar-nav">
@@ -25,6 +25,9 @@
                 {% block nav-add-author %}<a class="nav-item nav-link" href="{% url 'p_library:add_author' %}">Добавить автора</a>{% endblock %}
             </div>
         </nav>
+        {% endblock %}
+        
+        {% block login %}
         {% endblock %}
     </header>
     <main>
