Improve auth layouts

--- a/my_site/p_library/templates/add_author.html
+++ b/my_site/p_library/templates/add_author.html
@@ -1,4 +1,6 @@
 {% extends "base_add_element.html" %}
 
+{% block head_title %}Добавить автора{% endblock %}
+
 {% block nav-add-author %}<a class="nav-item nav-link active" href="">Добавить автора</a>{% endblock %}
 {% block form-header %}<h5 class="mb-3">Добавить автора в библиотеку</h5>{% endblock %}
