--- a/my_site/p_library/templates/add_book.html
+++ b/my_site/p_library/templates/add_book.html
@@ -1,4 +1,6 @@
 {% extends "base_add_element.html" %}
 
+{% block head_title %}Добавить книгу{% endblock %}
+
 {% block nav-add-book %}<a class="nav-item nav-link active" href="">Добавить книгу</a>{% endblock %}
 {% block form-header %}<h5 class="mb-3">Добавить книгу в библиотеку</h5>{% endblock %}
