--- a/my_site/p_library/templates/authors_list.html
+++ b/my_site/p_library/templates/authors_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Список авторов{% endblock %}
+
 {% block nav-add-authors-list %}<a class="nav-item nav-link active" href="">Авторы</a>{% endblock %}
 
 {% block content %}
