--- a/my_site/p_library/templates/borrowed_books.html
+++ b/my_site/p_library/templates/borrowed_books.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Книги в долгу{% endblock %}
+
 {% block nav-borrowed %}<a class="nav-item nav-link active text-uppercase" href="">Книги у друзей</a>{% endblock %}
 
 {% block content %}
