--- a/my_site/p_library/templates/publishers_list.html
+++ b/my_site/p_library/templates/publishers_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load pub_books %}
 
+{% block head_title %}Список издательств{% endblock %}
+
 {% block nav-pub %}<a class="nav-item nav-link active text-uppercase" href="">Издательства</a>{% endblock %}
 
 {% block content %}
