--- a/my_site/p_library/templates/base.html
+++ b/my_site/p_library/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <title>Моя библиотека</title>
+    <title>{% block head_title %}Моя библиотека{% endblock %}</title>
     {% block custom-css %}
     {% endblock %}
 </head>
